--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,8 @@ textarea {
 body {
     font-size: 1em;
     line-height: 1.4;
+	background-color:#333;
+	font-family: arial;
 }
 
 ::-moz-selection {
@@ -55,13 +57,16 @@ textarea {
     padding: 0.2em 0;
 }
 
+h3, p{
+	color:black;
+}
 
 /* ===== Initializr Styles ==================================================
    Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
    ========================================================================== */
 
 body {
-    font: 16px/26px Helvetica, Helvetica Neue, Arial;
+    font: 16px/26px Arial;
 }
 
 .wrapper {
@@ -74,22 +79,31 @@ body {
    =================== */
 
 .header-container {
-    border-bottom: 20px solid #e44d26;
+	background: url('../img/bg_menu02px.png') repeat; 
+    /* border-bottom: 20px solid #e44d26;*/
+}
+
+.main-container{
+	background-color:#333;
 }
 
 .footer-container,
 .main aside {
-    border-top: 20px solid #e44d26;
+    /* border-top: 20px solid #e44d26; */
 }
-
+.footer-container{
+	background-color:black !important;
+	text-align:center;
+	color:white;
+}
 .header-container,
 .footer-container,
 .main aside {
-    background: #f16529;
+    background: #333;
 }
 
 .title {
-    color: white;
+	display:none;
 }
 
 /* ==============
@@ -104,23 +118,20 @@ nav ul {
 nav a {
     display: block;
     margin-bottom: 10px;
-    padding: 15px 0;
-
-    text-align: center;
+    padding: 7px 0;
     text-decoration: none;
     font-weight: bold;
-
-    color: white;
-    background: #e44d26;
+    background: url('../img/bg_menu02px.png') repeat;
+	color:#8d5800;
 }
 
-nav a:hover,
-nav a:visited {
-    color: white;
+nav a:hover{
+    color: black;
+	text-decoration: underline;
 }
 
 nav a:hover {
-    text-decoration: underline;
+    
 }
 
 /* ==============
@@ -162,18 +173,141 @@ nav a:hover {
 
 
 
+aside h3{
+	font-size: 1.17em;
+	text-align: center;
+	width: 100%;
+	opacity: 0.7;
+	color: #8d5800;
+	margin: 0px;
+}
+aside:hover h3{
+	color:black;
+}
+aside p {
+	font-size:12px;
+	color:black;
+}
 
+footer h3{
+	color: white;
+	font-size: 11px;
+}
 
+.titlemobile{
+	display:none;
+}
 
+.boxgrid{ 
+	width: 100%;
+	height: 190px;
+	float: left;
+	background: yellow;
+	overflow: hidden;
+	position: relative; 
+			}
+				.boxgrid img{ 
+					position: absolute; 
+					top: 0; 
+					left: 0; 
+					border: 0;
+					width: 100%;
+					height:100%;
+				}
+				.boxgrid p{ 
+					padding: 0 10px; 
+					color:black;
+					line-height: 16px;
+				}
+				
+			.boxcaption{ 
+				float: left; 
+				position: absolute; 
+				background: #efc511;
+				height: 300px; 
+				width: 100%; 
+				opacity: .8; 
+				/* For IE 5-7 */
+				filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+				/* For IE 8 */
+				-MS-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+ 			}
+ 				.captionfull .boxcaption {
+ 					top: 260;
+ 					left: 0;
+ 				}
+ 				.caption .boxcaption {
+ 					top: 220;
+ 					left: 0;
+ 				}
 
-
-
-
+.cover{
+	top:160px;
+}
 
 
 /* ==========================================================================
    Media Queries
    ========================================================================== */
+@media only screen and (max-width: 480px) {
+	
+	.titlemobile {
+		position: relative;
+		padding: 0px;
+		margin-bottom: 16%;
+		margin: 0px;
+		float: left;
+		display:block;
+		
+	}
+	.titlemobile img{
+		width:40%;
+		float: left;
+		display:block;
+	}
+	
+	.titlemobile p{
+		color: white;
+		font-size: 11px;
+		width: 53%;
+		padding: 1%;
+		float: left;
+		line-height: 20px;
+		font-style: italic;
+		letter-spacing: 1px;
+		display:block;
+	}
+	
+    nav a {
+		margin: 5% 1.7%;
+		padding: 6px 0%;
+		margin-bottom: 0;
+		color: #8d5800;
+		text-align: center;
+    }
+	
+	.text-container p{
+		display:none;
+	}
+	
+	.main aside {
+		float: left;
+		width: 77%;
+		margin: 5% 10%;
+		padding: 2px;
+		background-color: yellow;
+	}
+	
+	.boxgrid {
+		width: 100%;
+		height: 190px;
+		float: left;
+		background: yellow;
+		overflow: hidden;
+		position: relative;
+	}
+	
+}
 
 @media only screen and (min-width: 480px) {
 
@@ -182,11 +316,16 @@ nav a:hover {
    ==================== */
 
     nav a {
-        float: left;
-        width: 27%;
-        margin: 0 1.7%;
-        padding: 25px 2%;
-        margin-bottom: 0;
+		float: left;
+		margin: 0 1.7%;
+		padding: 6px 0%;
+		margin-bottom: 0;
+		color:#8d5800;
+    }
+	
+    nav a:hover {
+		style:underline;
+		color:black;
     }
 
     nav li:first-child a {
@@ -196,6 +335,7 @@ nav a:hover {
     nav li:last-child a {
         margin-right: 0;
     }
+	
 
 /* ========================
     INTERMEDIATE: IE Fixes
@@ -208,9 +348,16 @@ nav a:hover {
     .oldie nav a {
         margin: 0 0.7%;
     }
+	
+	.title {
+		position: absolute;
+		padding: 0px;
+		margin: 0px;
+		display:none;
+	}
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px)  {
 
 /* ====================
     WIDE: CSS3 Effects
@@ -218,9 +365,10 @@ nav a:hover {
 
     .header-container,
     .main aside {
-        -webkit-box-shadow: 0 5px 10px #aaa;
+		background: url('../img/bg_menu02px.png') repeat;
+       /* -webkit-box-shadow: 0 5px 10px #aaa;
            -moz-box-shadow: 0 5px 10px #aaa;
-                box-shadow: 0 5px 10px #aaa;
+                box-shadow: 0 5px 10px #aaa;*/
     }
 
 /* ============
@@ -229,13 +377,26 @@ nav a:hover {
 
     .title {
         float: left;
+		display:block;
     }
+	
+	.title img{
+		width:80%;
+	}
 
     nav {
-        float: right;
-        width: 38%;
+		float: right;
+		width: 68%;
     }
-
+	
+	nav a {
+		margin: 0 1%;
+		font-size: 14px;
+	}
+	
+	.text-container p {
+		font-size:25px;
+	}
 /* ============
     WIDE: Main
    ============ */
@@ -245,10 +406,13 @@ nav a:hover {
         width: 57%;
     }
 
-    .main aside {
-        float: right;
-        width: 28%;
-    }
+	.main aside {
+		float: left;
+		width: 21.5%;
+		margin: 1%;
+		padding: 2px;
+		background-color:yellow;
+	}
 }
 
 @media only screen and (min-width: 1140px) {
@@ -256,7 +420,10 @@ nav a:hover {
 /* ===============
     Maximal Width
    =============== */
-
+	.title{
+		display:block;
+	}
+	
     .wrapper {
         width: 1026px; /* 1140px - 10% for margins */
         margin: 0 auto;
@@ -323,6 +490,23 @@ nav a:hover {
 
 .clearfix {
     *zoom: 1;
+}
+
+.text-container{
+	display:block;
+}
+
+.text-container p{
+	color: white;
+	font-size: 35px;
+	width: 51%;
+	padding: 4%;
+	float: right;
+	line-height: 43px;
+	padding-right: 14%;
+	font-style: italic;
+	letter-spacing: 1px;
+	
 }
 
 /* ==========================================================================
